--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,4 +33,8 @@ const { title } = Astro.props;
 		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
 			Bitstream Vera Sans Mono, Courier New, monospace;
 	}
+
+	.cms-edit {
+		background: transparent;
+	}
 </style>
