top level edit var

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,18 +3,20 @@ import RichText from '../cms/ui_fields/RichText.svelte';
 import Image from '../cms/ui_fields/Image.svelte';
 import Hero from './Hero.vue'
 
+const {edit} = Astro.props;
+
 ---
 
 <Hero>
 	<Image 
 		slot="image" 
 		client:load 
-		edit={true}
+		{edit}
 	/>
 	<RichText 
 		slot="text" 
 		client:load 
 		value="text" 
-		edit={true} 
+		{edit}
 	/>
 </Hero>
