--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,10 +2,11 @@
 import Layout from '../layouts/Layout.astro';
 import Hero from '../components/Hero.astro';
 
+const edit = false;
 ---
 
 <Layout title="Nebulite Techdemo 1">
-	<Hero/>
+	<Hero {edit}/>
 </Layout>
 
 <style>
