--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,14 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Hero from '../components/Hero.astro';
+import SecondHero from '../components/SecondHero.astro';
 import EditToggle from '../cms/elements/EditToggle.svelte';
 ---
 
 <Layout title="Nebulite Techdemo 1">
 	<EditToggle client:load/>
 	<Hero/>
+	<SecondHero/>
 </Layout>
 
 <style>
